login form update

--- a/src/screens/shared/button/Button.module.scss
+++ b/src/screens/shared/button/Button.module.scss
@@ -6,6 +6,27 @@
 	font-size: 1.125rem;
 	transition: all 0.2s;
 
+	&:active {
+		transform: scale(98%);
+	}
+
+	&:disabled {
+		filter: blur(1px);
+		color: #000;
+		background-color: #f4f5f6;
+		border: none;
+		cursor: default;
+
+		&:hover {
+			background-color: #f4f5f6;
+		}
+
+		&:active {
+			background-color: #f4f5f6;
+			transform: scale(1);
+		}
+	}
+
 	&--purple {
 		background-color: #580ea2;
 		color: #fff;
@@ -16,7 +37,6 @@
 
 		&:active {
 			background-color: #271a58;
-			transform: scale(0.98);
 		}
 	}
 
