--- a/src/global_style/index.scss
+++ b/src/global_style/index.scss
@@ -7,6 +7,7 @@
 :root {
 	--main-dark: #181818;
 	--middle-dark: #2e2e2e;
+	--dark-gray: #4e4e4e;
 	--menu-dark: #1c1c1c;
 	--dark: #222;
 	--more-dark: #1e1e1e;
