--- a/src/screens/shared/playerBar/components/controlBox/ControlBox.module.scss
+++ b/src/screens/shared/playerBar/components/controlBox/ControlBox.module.scss
@@ -1,7 +1,7 @@
 .control {
 	&Panel {
 		display: flex;
-		width: 294px;
+		min-width: 260px;
 		height: 100%;
 		justify-content: space-evenly;
 		align-items: center;
