--- a/src/global_style/index.scss
+++ b/src/global_style/index.scss
@@ -11,6 +11,8 @@
   --menu-dark: #1c1c1c;
   --dark: #222;
   --more-dark: #1e1e1e;
+  --hover-color: #d9b6ff;
+  --active-color: #ad61ff;
 }
 
 html {
