--- a/src/screens/shared/collectionsNav/CollectionsNav.module.scss
+++ b/src/screens/shared/collectionsNav/CollectionsNav.module.scss
@@ -1,10 +1,11 @@
 .collectionsNavBox {
-	min-width: 340px;
+	min-width: 300px;
 	height: 100%;
-	padding: 0 0 140px 0;
+	padding: 0 1rem 140px 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
+	align-items: center;
 	gap: 30px;
 }
 
