--- a/src/screens/layout/Layout.module.scss
+++ b/src/screens/layout/Layout.module.scss
@@ -3,10 +3,15 @@
 	flex-grow: 1;
 	display: flex;
 
-	&Right {
+	&Middle {
 		width: 100%;
+		min-width: 520px;
 		height: 100%;
 		display: flex;
 		flex-direction: column;
+	}
+
+	&Right {
+		height: 100%;
 	}
 }
