--- a/src/screens/main/MainList.module.scss
+++ b/src/screens/main/MainList.module.scss
@@ -23,6 +23,7 @@
 		display: flex;
 		align-items: center;
 		width: 100%;
+		gap: 1rem;
 
 		&:hover:not(:first-child) {
 			box-shadow: 0 0 5px var(--dark-gray);
