--- a/src/screens/main/TrackList.module.scss
+++ b/src/screens/main/TrackList.module.scss
@@ -1,7 +1,7 @@
 .trackList {
   width: 100%;
   height: calc(100vh - 73px - 248px - 40px);
-  overflow: hidden;
+  // overflow: hidden;
   display: flex;
   flex-direction: column;
   padding-right: 3vw;
