--- a/src/global_style/index.scss
+++ b/src/global_style/index.scss
@@ -13,6 +13,7 @@
   --more-dark: #1e1e1e;
   --hover-color: #d9b6ff;
   --active-color: #ad61ff;
+  --scrollbar-bg-color: #4b4949
 }
 
 html {
@@ -30,5 +31,23 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  max-height: 100vh;
+  min-height: 900px;
+
+}
+
+.styled-scroll-bar {
+  
+  &::-webkit-scrollbar {
+    width: 4px;
+    background: var(--scrollbar-bg-color);
+    border-radius: 2px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    width: 4px;
+    border-radius: 2px;
+
+    background: #ffffff;
+  }
 }
