--- a/src/screens/layout/Layout.module.scss
+++ b/src/screens/layout/Layout.module.scss
@@ -4,13 +4,11 @@
   display: flex;
 
   &Middle {
-    width: 100%;
-    min-width: 900px;
-    height: 100%;
     display: flex;
+    min-width: 600px;
+    width: 100%;
+    max-height: 100vh;
     flex-direction: column;
-    padding-left: 244px;
-    padding-bottom: 73px;
   }
 
   &Right {
