--- a/src/screens/main/TrackList.module.scss
+++ b/src/screens/main/TrackList.module.scss
@@ -1,12 +1,12 @@
 .trackList {
   width: 100%;
-  height: calc(100vh - 73px - 248px - 40px);
-  // overflow: hidden;
+  // height: calc(100vh - 73px - 248px);
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
-  padding-right: 3vw;
-  padding-left: 1rem;
+  padding: 0 1rem;
   gap: 0.75rem;
+  flex-shrink: 1;
 
   &Header {
     color: var(--dark-gray);
@@ -53,6 +53,10 @@
       flex: 0.5;
       color: var(--dark-gray);
       padding-right: 0.5rem;
+    }
+
+    &:last-child {
+      margin-bottom: calc(73px + 0.75rem);
     }
   }
 }
