--- a/src/screens/main/TrackList.module.scss
+++ b/src/screens/main/TrackList.module.scss
@@ -1,17 +1,19 @@
 .trackList {
   width: 100%;
-  // height: calc(100vh - 73px - 248px);
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   padding: 0 1rem;
-  gap: 0.75rem;
   flex-shrink: 1;
 
   &Header {
+    display: flex;
+    align-items: center;
+    width: 100%;
     color: var(--dark-gray);
     min-height: 40px;
     text-transform: uppercase;
+    padding: 0 1rem;
 
     &Svg {
       height: 1rem;
@@ -24,13 +26,17 @@
     align-items: center;
     width: 100%;
     gap: 1rem;
+    padding: 0.5rem 0;
 
-    &:hover:not(:first-child) {
-      box-shadow: 0 0 5px var(--dark-gray);
+    transition: background-color 0.1s ease-in-out;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 2%);
       cursor: pointer;
     }
 
     &Col1 {
+      padding-left: 0.5rem;
       display: flex;
       align-items: center;
       gap: 1rem;
