homework requirements completed

--- a/src/global_style/index.scss
+++ b/src/global_style/index.scss
@@ -14,6 +14,7 @@
   --hover-color: #d9b6ff;
   --active-color: #ad61ff;
   --scrollbar-bg-color: #4b4949;
+  --search-select-bg-color: #313131;
 }
 
 html {
