--- a/src/screens/NotFound/NotFoundScreen.module.scss
+++ b/src/screens/NotFound/NotFoundScreen.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: var(--more-dark);
+  // background-color: var(--more-dark);
   gap: 2rem;
 
   &Title {
@@ -23,6 +23,6 @@
     line-height: 1.5rem;
     width: 17.75rem;
     font-size: 1.125rem;
-    color: var(--middle-dark);
+    color: var(--dark-gray);
   }
 }
