--- a/src/screens/components/PlayerBar/components/TrackBox/TrackBox.module.scss
+++ b/src/screens/components/PlayerBar/components/TrackBox/TrackBox.module.scss
@@ -1,4 +1,4 @@
-.songBox {
+.TrackBox {
   width: 100%;
   height: 100%;
   display: flex;
@@ -11,7 +11,7 @@
   height: 51px;
 }
 
-.songInfo {
+.TrackInfo {
   padding-left: 1rem;
   display: flex;
   flex-direction: column;
