--- a/src/screens/components/PlayerBar/PlayerBar.module.scss
+++ b/src/screens/components/PlayerBar/PlayerBar.module.scss
@@ -1,11 +1,12 @@
 .playerBarBox {
   position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: -73px;
   width: 100%;
   height: 73px;
   display: flex;
   flex-direction: column;
+  transition: bottom 0.2s ease-in-out;
 }
 
 .progressBar {
@@ -20,4 +21,8 @@
   width: 100%;
   height: 100%;
   background-color: rgba(28, 28, 28, 80%);
+}
+
+.show {
+  bottom: 0px;
 }
