homework requirements completed

--- a/src/global_style/index.scss
+++ b/src/global_style/index.scss
@@ -15,6 +15,7 @@
   --active-color: #ad61ff;
   --scrollbar-bg-color: #4b4949;
   --search-select-bg-color: #313131;
+  --color-progress-bar: #9a48f1;
 }
 
 html {
