--- a/src/screens/login/LoginScreen.module.scss
+++ b/src/screens/login/LoginScreen.module.scss
@@ -11,21 +11,11 @@
   color: #000;
   font-size: 1.125rem;
 
-  &__input {
+  &__input-box {
     width: 100%;
-    border-bottom: 1px solid #d0cece;
-    padding: 8px 0;
-
-    &::placeholder {
-      color: #e1e1e1;
-    }
-
-    &-box {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      gap: 24px;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
   }
 
   &__button-box {
